fix issues with about page

--- a/index.html
+++ b/index.html
@@ -78,6 +78,6 @@
 	</section>
 </body>
 <footer>
-<img src = "images/fb-icon.png" alt="fb logo">
+<img src = "images/fb-icon.png" class="fbLogo" alt="fb logo">
 <img src = "images/tweet-icon.png" alt="twitter logo">
 </footer>
